Devide sidebar and Install chart.js.

--- a/vue_hello/quiz/index.html
+++ b/vue_hello/quiz/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="app">
-        <app />
+        <quiz />
     </div>
     <script src="/public/js/quiz.js"></script>
 </body>
